<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_card"
    tools:context=".ui.fragments.home.HomeFragment">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.66"
            android:contentDescription="@string/album_cover"
            android:scaleType="centerCrop" />

        <LinearLayout
            style="@style/AppTheme.Header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="64dp">

            <TextView
                android:id="@+id/tv_song"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/white"
                android:textSize="32sp"
                tools:text="Poisonous Shadows" />

            <TextView
                android:id="@+id/tv_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="Megadeth" />

            <TextView
                android:id="@+id/tv_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:text="Dystopia" />
        </LinearLayout>

    </FrameLayout>

    <ScrollView
        android:id="@+id/sv_lyrics"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <LinearLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_top"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingTop="32dp"
            android:paddingEnd="32dp"
            android:paddingBottom="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:drawableStart="@drawable/ic_spotify_small"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/accent"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center_vertical"
                        android:text="@string/listen_on_spotify"
                        android:textColor="@color/accent" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_bookmark_active"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/bookmark"
                    android:src="@drawable/ic_bookmark"
                    android:tint="@color/accent"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/iv_bookmark"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/bookmark"
                    android:src="@drawable/ic_bookmark_outline"
                    android:tint="@color/text_light" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/skeleton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <include
                    layout="@layout/fragment_skeleton_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp" />

                <include
                    layout="@layout/fragment_skeleton_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp" />

                <include
                    layout="@layout/fragment_skeleton_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_lyrics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:letterSpacing="0.025"
                android:lineSpacingExtra="8dp"
                android:lineSpacingMultiplier="1.1"
                android:visibility="gone"
                tools:text="@tools:sample/lorem/random" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
